# poco-cmake

./: .gitignore  README.md  poco-2009.1-cmake.patch  poco-2013.2-cmake.patch
cmake/: FindPoco.cmake  PocoBundleSpecConfigure.cmake  PocoBundles.cmake  PocoBundlesFunctions.cmake
example/: CMakeLists.txt
example/BundleContainerApplication/: CMakeLists.txt
example/BundleContainerApplication/src/: BundleContainerApplication.cpp
example/ConsumerBundle/: CMakeLists.txt
example/ConsumerBundle/src/: ConsumerBundleActivator.cpp  ConsumerBundleActivator.h
example/ServiceBundle/: CMakeLists.txt
example/ServiceBundle/src/: AdditionService.cpp  AdditionService.h  ServiceBundleActivator.cpp  ServiceBundleActivator.h
example/SimpleBundle/: CMakeLists.txt
example/SimpleBundle/bundle/: payload.txt
example/SimpleBundle/src/: SimpleBundleActivator.cpp  SimpleBundleActivator.h
