cmake_minimum_required(VERSION 2.8.10.2)

project(poco-cmake-examples)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../cmake/)
list(APPEND CMAKE_INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../cmake/)
if(APPLE)
option(USE_CXX11 "Use the c++11 extensions." ON)
if(USE_CXX11)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
	if(${CMAKE_SYSTEM_NAME} STREQUAL Darwin)
		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
		set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -stdlib=libc++")
		set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++11")
		set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
	endif()
endif()
endif()
add_subdirectory(BundleContainerApplication)
add_subdirectory(SimpleBundle)
add_subdirectory(ServiceBundle)
add_subdirectory(ConsumerBundle)

install(EXPORT example-exports DESTINATION cmake)